# github-copilot-model-fetcher

./: .gitignore  CLAUDE.md  GITHUB_ACTIONS_SOLUTION.md  README.md  TUI_GUIDE.md  auth.sh  fetch.sh  list.sh  pyproject.toml  run.sh  set_env.sh.template  setup-scheduler.sh  test_api.py  test_auth.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: daily-fetch.yml
litellm/: litellm-config.json  litellm-config.yaml
models/: copilot-models-2026-04-21.json  copilot-models-2026-04-22.json  copilot-models-2026-04-23.json  copilot-models-2026-04-25.json  copilot-models-2026-04-26.json  copilot-models-2026-04-29.json  copilot-models.json  litellm-config.yaml
openspec/changes/archive/2026-04-27-litellm-config/: proposal.md  tasks.md
openspec/changes/litellm-config/: design.md  tasks.md
src/copilot_fetcher/: __init__.py  __main__.py  api.py  copilot_cli.py  device_flow.py  gh_auth.py  litellm_config.py  oauth.py  storage.py  tui.py
tests/: test_cli_litellm.py  test_litellm_config.py
