[project]
name = "github-copilot-model-fetcher"
version = "0.1.0"
description = "Fetch GitHub Copilot models via OAuth"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
